--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -272,6 +272,7 @@
         }
         $(document).ready(function(){
             fetchDATA();
+            getCountries();
             var dataTimer = setInterval(function() {
                 $('.spinner').addClass('fa-spin');
                 updateDATA();
