--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -37,6 +37,11 @@
             <span class="lang">
                 <span class="flag-icon-background flag-icon-tz flag-icon-squared"></span>
              </span>
+             <span class="tableSwitch">
+                <i class="fa-stack fa-2x">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fas fa-table fa-stack-1x fa-inverse"></i></i>
+            </span>
             <span class="refresher">
                 <i class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -304,6 +309,21 @@
                     $('body, #footer').removeClass("darkmode");
                     Cookies.set('darkmode', 'false', { expires: 365 });
                 }
+            });
+            $('.tableSwitch').click(function() {
+                if($('.countrydata').hasClass("show")) {
+
+                    $('.countrydata').removeClass("show").fadeOut(200, function(){
+                        $('updates').fadeIn(500).addClass("show");    
+                    });
+
+                } else {
+                    $('updates').removeClass("show").fadeOut(200, function() {
+                        $('.countrydata').fadeIn(500).addClass("show");
+                });
+                }
+            
+
             });
             $('body, #footer').css({"transition":"background 0.25s ease-in-out, color 0.25s ease-in-out"});
         });
