--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -312,14 +312,15 @@
             });
             $('.tableSwitch').click(function() {
                 if($('.countrydata').hasClass("show")) {
-
+                    $('.cuInstructions').fadeIn(200);
                     $('.countrydata').removeClass("show").fadeOut(200, function(){
                         $('updates').fadeIn(500).addClass("show");    
                     });
 
                 } else {
+                    $('.cuInstructions').fadeOut(200);
                     $('updates').removeClass("show").fadeOut(200, function() {
-                        $('.countrydata').fadeIn(500).addClass("show");
+                    $('.countrydata').fadeIn(500).addClass("show");
                 });
                 }
             
