--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -195,9 +195,10 @@ body {
 }
 .swahili {display:none;}
 .toggles {
-    left: 5px;
-    z-index: 8;
-    bottom: 5px;
+    font-size: 1.563em;
+    right: 5px;
+    z-index: 99;
+    top: 72px;
     position: fixed;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25) inset;
     display: flex;
