--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -26,8 +26,6 @@
 
     <div class="initial-content">
     <div id="main" role="main" class="">
-    <updates>
-    <h1><span class="cuTitle">COVID-19 Updates</span>
         <span class="toggles">
             <span class="darkswitch">
                 <i class="fa-stack fa-2x">
@@ -48,7 +46,8 @@
                 <i class="fas fa-sync fa-stack-1x fa-inverse spinner"></i></i>
             </span>
         </span>
-    </h1>
+    <updates>
+    <h1><span class="cuTitle">COVID-19 Updates</span></h1>
     <subtitle><span class="cuUpdated"></span><span class="cuSource">&nbsp;<a href="https://worldometers.info/coronavirus" target="_blank" title="worldometers.info/coronavirus">[source]</a></span></subtitle>
     <ul class="CovidUpdates">
         <li><span class="cuLabel">Total cases: </span><span class="cuCases"></span></li>
