--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -195,16 +195,21 @@ body {
 }
 .swahili {display:none;}
 .toggles {
+    opacity:0;
+    transition: opacity 0.5s ease-in-out;
     font-size: 1.563em;
     right: 5px;
-    z-index: 99;
-    top: 72px;
+    z-index: 21;
+    top: 92px;
     position: fixed;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25) inset;
     display: flex;
     border-radius: 28px;
     padding: 4px 0px 4px 12px;
     background: #ccc;
+    @include breakpoint($mobile-max) {
+        top: 72px;
+      }
 }
 .lang {
     height: 36px;
@@ -318,4 +323,11 @@ updates note {
 }
 .countrydata {
     display:none;
+    margin-top:60px;
+}
+.countrydata .odd {
+    background: #fafafa;
+}
+#countries tbody > tr > td:nth-child(1) {
+    font-weight: bold;
 }
