--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -172,6 +172,7 @@
                 header: true,
                 footer: true
             },
+            responsive: true,
             language: {
             search: "_INPUT_",
             searchPlaceholder: "Search..."
