--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -285,7 +285,6 @@
         }
         $(document).ready(function(){
             fetchDATA();
-           
             var dataTimer = setInterval(function() {
                 $('.spinner').addClass('fa-spin');
                 updateDATA();
@@ -329,7 +328,9 @@
                 } else {
                     $('.cuInstructions').fadeOut(200);
                     $('updates').removeClass("show").fadeOut(200, function() {
-                    $('.countrydata').fadeIn(500).addClass("show");
+                    $('.countrydata').fadeIn(500, function(){
+                        getCountries();
+                    }).addClass("show");
                 });
                 }
             
