--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -117,7 +117,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <th>TOTAL (Globally): </th>
+                    <th>TOTAL (Global): </th>
                     <th></th>
                     <th></th>
                     <th></th>
