--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -209,7 +209,7 @@
             ],
             
             "footerCallback": function ( row, data, start, end, display ) {
-                    var api = this.api(), data;
+                    var api = this.api();
         
                     // Remove the formatting to get integer data for summation
                     var intVal = function ( i ) {
