--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -17,6 +17,7 @@
             } else {
                     $('.darkswitch-toggle').removeClass("fa-sun").addClass("fa-moon");
         }
+        $('.scrollbutton').addClass('bottom40');
   </script>
   </head>
 
