--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -17,7 +17,6 @@
             } else {
                     $('.darkswitch-toggle').removeClass("fa-sun").addClass("fa-moon");
         }
-        $('.scrollbutton').addClass('bottom40');
   </script>
   </head>
 
@@ -172,6 +171,7 @@
             
             fixedHeader: {
                 header: true,
+                headerOffset: $('.masthead').outerHeight(),
                 footer: true
             },
             responsive: true,
@@ -235,6 +235,7 @@
                     $( api.column( 5 ).footer() ).html(total_recovered.toLocaleString("en-US"));
                     $( api.column( 6 ).footer() ).html(active_cases.toLocaleString("en-US"));
                     $( api.column( 7 ).footer() ).html(critical.toLocaleString("en-US"));
+                    $(api.table().footer()).addClass("hanging");
                 }
             
             });
@@ -323,7 +324,9 @@
             $('.tableSwitch').click(function() {
                 if($('.tableSwitch .set').hasClass("fa-th-list")) {
                     $('.tableSwitch .set').removeClass("fa-th-list").addClass("fa-th-large");
+                    $('.scrollbutton').css({"bottom": $('.hanging').outerHeight() || "64px" });
                 } else {
+                    $('.scrollbutton').css({"bottom": "inherit" });
                     $('.tableSwitch .set').removeClass("fa-th-large").addClass("fa-th-list");
                 }
                 if($('.countrydata').hasClass("show")) {
