--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -171,7 +171,6 @@
             
             fixedHeader: {
                 header: true,
-                headerOffset: $('.masthead').outerHeight(),
                 footer: true
             },
             responsive: true,
@@ -325,8 +324,9 @@
                 if($('.tableSwitch .set').hasClass("fa-th-list")) {
                     $('.tableSwitch .set').removeClass("fa-th-list").addClass("fa-th-large");
                     $('.scrollbutton').css({"bottom": $('.hanging').outerHeight() || "64px" });
+                    $('.fixedHeader-floating').first().addClass("fixedMobile");
                 } else {
-                    $('.scrollbutton').css({"bottom": "inherit" });
+                    $('.scrollbutton').css({"bottom": "" });
                     $('.tableSwitch .set').removeClass("fa-th-large").addClass("fa-th-list");
                 }
                 if($('.countrydata').hasClass("show")) {
