--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -346,7 +346,7 @@
             $(window).scroll(function(){
                 if($('.fixedHeader-floating').css("top") == "0px")
                 {
-                    $(this).addClass("fixedMobile");
+                    $('.fixedHeader-floating').addClass("fixedMobile");
 
                 } else {
                     $('.fixedHeader-floating').removeClass("fixedMobile");
