--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -170,8 +170,8 @@
         $('#countries').DataTable( {
             
             fixedHeader: {
-                header: true,
-                footer: true
+                header: false,
+                footer: false
             },
             responsive: true,
             language: {
