--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -170,7 +170,7 @@
         $('#countries').DataTable( {
             
             fixedHeader: {
-                header: false,
+                header: true,
                 footer: false
             },
             responsive: true,
