--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -360,8 +360,16 @@ updates note {
 .fixedMobile {
     background:#f2f3f3!important;
     @include breakpoint($mobile-max) {
+        background:#f2f3f3!important;
         padding-top: 110px!important;
       }
     
 }
-.darkmode .fixedMobile {background: #000!important;}
+.darkmode .fixedMobile {
+    background:#000!important;
+    @include breakpoint($mobile-max) {
+        background:#000!important;
+        padding-top: 110px!important;
+      }
+    
+}
