--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -147,10 +147,12 @@
         {% include_cached footer.html %}
       </footer>
     </div>
+    <div class="tempSearch"><input type="text" id="cSearch"></div>
     <script>
         var cases = "https://thedextazlab.herokuapp.com/users/1/web_requests/79/covid19.json";
         var countries = "https://thedextazlab.herokuapp.com/users/1/web_requests/85/covid19.json";
         var cData = {"data": [{}]};
+        var dTable = "";
         function getCountries() {
             cData.data.length = 0;
             $.getJSON(countries, function(data) {
@@ -167,7 +169,7 @@
         if ( $.fn.DataTable.isDataTable('#countries') ) {
         $('#countries').DataTable().destroy();
         }
-        $('#countries').DataTable( {
+        dTable = $('#countries').DataTable( {
             
             fixedHeader: {
                 header: true,
@@ -339,11 +341,19 @@
                     }).addClass("show");
                 });
                 }
+                $('#cSearch').keyup(function(){
+                    dTable.search($(this).val()).draw();
+                });
             });
             $(window).scroll(function(){
                 var fixed = $('.fixedHeader-floating').filter(function() {
                     return $(this).css('top').indexOf('0px') > -1
                 })
+                if($(fixed).hasClass("fixedMobile")) {
+                    $('.tempSearch').fadeIn();
+                } else {
+                    $('.tempSearch').fadeOut();
+                }
                 $('.fixedHeader-floating').removeClass("fixedMobile");
                 $(fixed).addClass("fixedMobile");
                 
