--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -200,8 +200,8 @@ body {
     font-size: 1.563em;
     right: 5px;
     z-index: 21;
-    top: 92px;
-    position: fixed;
+    top: 22px;
+    position: absolute;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25) inset;
     display: flex;
     border-radius: 28px;
@@ -209,6 +209,7 @@ body {
     background: #ccc;
     @include breakpoint($mobile-max) {
         top: 72px;
+        position: fixed;
       }
 }
 .lang {
