--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -342,6 +342,11 @@
                 }
             });
             $(window).scroll(function(){
+                $('.toggles').fadeOut();
+                clearTimeout($.data(this, 'scrollTimer'));
+                $.data(this, 'scrollTimer', setTimeout(function() {
+                    $('.toggles').fadeIn();
+                }, 250));
                 var fixed = $('.fixedHeader-floating').filter(function() {
                     return $(this).css('top').indexOf('0px') > -1
                 })
