--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -198,18 +198,17 @@ body {
     opacity:0;
     transition: opacity 0.5s ease-in-out;
     font-size: 1.563em;
-    right: 5px;
+    bottom:8px;
     z-index: 21;
-    top: 22px;
-    position: absolute;
+    left:8px;
+    position: fixed;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25) inset;
     display: flex;
     border-radius: 28px;
     padding: 4px 0px 4px 12px;
     background: #ccc;
     @include breakpoint($mobile-max) {
-        top: 72px;
-        position: fixed;
+        
       }
 }
 .lang {
@@ -364,7 +363,7 @@ updates note {
         left:0!important;
         right:0!important;
         background:#f2f3f3!important;
-        padding-top: 110px!important;
+        padding-top: 60px!important;
       }
     
 }
@@ -374,7 +373,7 @@ updates note {
         left:0!important;
         right:0!important;
         background:#000!important;
-        padding-top: 110px!important;
+        padding-top: 60px!important;
       }
     
 }
