--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -131,7 +131,7 @@ updates subtitle {
     box-shadow: 0 0 12px rgba(0,0,0,.2);
     padding: 2px;
     line-height: 0;
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,.75);
     color: #fff;
     cursor: pointer;
     font-size: 56px;
@@ -196,6 +196,7 @@ body {
 .swahili {display:none;}
 .toggles {
     opacity:0;
+    border: 3px solid;
     transition: opacity 0.5s ease-in-out;
     font-size: 1.563em;
     bottom:8px;
@@ -376,4 +377,7 @@ updates note {
         padding-top: 60px!important;
       }
     
+}
+.layout--covid19 #footer {
+    padding-bottom: 30px;
 }
