--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -286,6 +286,7 @@
             }
         }
         $(document).ready(function(){
+            $('.settings').appendTo('#footer footer');
             fetchDATA();
             var dataTimer = setInterval(function() {
                 $('.spinner').addClass('fa-spin');
