--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -199,7 +199,7 @@ body {
     border: 3px solid #000;
     transition: opacity 0.5s ease-in-out;
     font-size: 1.563em;
-    bottom:8px;
+    bottom:4px;
     z-index: 21;
     left:8px;
     position: fixed;
@@ -209,7 +209,7 @@ body {
     padding: 4px 0px 4px 12px;
     background: #ccc;
     @include breakpoint($mobile-max) {
-        bottom:4px;
+        bottom:8px;
       }
 }
 .lang {
@@ -382,7 +382,7 @@ updates note {
     padding-bottom: 40px;
 }
 .settings {
-    border-top: 2px solid;
+    border-top: 2px solid #000;
     z-index: 1;
     background: #000;
     height: 60px;
