--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -391,3 +391,8 @@ updates note {
     left: 0;
     right: 0;
 }
+
+.nohighlight {
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent;
+    }
