--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -158,10 +158,8 @@
                 for(i = 0; i < data.items[0].country.length; i++) {
                     cData.data.push({"country" : data.items[0].country[i], "total_cases" : data.items[0].total_cases[i], "new_cases": data.items[0].new_cases[i], "total_deaths": data.items[0].total_deaths[i], "new_deaths": data.items[0].new_deaths[i], "total_recovered": data.items[0].total_recovered[i], "active_cases": data.items[0].active_cases[i], "critical": data.items[0].critical[i], "cases_mil": data.items[0].cases_mil[i], "deaths_mil": data.items[0].deaths_mil[i], "first_case": data.items[0].first_case[i]});
                 }
-            loadTable();
-            
+                loadTable();
             });
-
         }
 
         function loadTable() {
@@ -338,7 +336,7 @@
                     $('.cuInstructions').fadeOut(200);
                     $('updates').removeClass("show").fadeOut(200, function() {
                     $('.countrydata').fadeIn(500, function(){
-                    getCountries();
+                    //getCountries();
                     }).addClass("show");
                 });
                 }
