--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -179,7 +179,7 @@
             },
             info: false,
             paging: false,
-            deferRender: true,
+            deferRender: false,
             "createdRow": function( row, data, dataIndex){
                         if( data.new_cases !== ""){
                             $('td', row).eq(2).addClass('yellowClass');
