--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -237,6 +237,7 @@
             
             });
         }
+        getCountries();
         function fetchDATA (){
             $('updates').removeClass("show").fadeOut(200, function() {
                 $('.loader').removeClass("loaded").fadeIn(200);
