--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -337,7 +337,7 @@
                     $('.cuInstructions').fadeIn(200);
                     $('.countrydata').removeClass("show").fadeOut(200, function(){
                         $('updates').fadeIn(500).addClass("show"); 
-                        $('.fixedHeader-floating').detach();   
+                        $('.fixedHeader-floating').remove();   
                     });
 
                 } else {
